# crn_paper

./: .gitignore  LICENSE  PPFP_demographics.py  PPH_demographics.py  README.md  analyzers.py  combine_rand_test.py  dist_plot.py  explore_erdosrenyinet.py  explore_tx_correlation.py  figure.py  hiv.py  midsq.c  net_perf.py  pairwise_bias.py  plotting.py  pyproject.toml  rng_timing.py  run_HIV.py  run_PPFP.py  run_PPH.py  run_SIRstatic.py  run_VMMC.py  run_comparison.py  run_sweep.py  setup.py
.github/workflows/: pr_agent.yml
crn_paper/: PPH_demographics.py  analyzers.py  hiv.py  paths.py
data/: sources.txt  ssa_agedist.csv  ssa_asfr.csv  ssa_asmr.csv
migration/: ABOUT.md  README.md  migration.toml
migration/get_methods_list/: test1.py  test2.py
migration/get_suggestions/: test1.py
scripts/: README.md  net_perf.py  pairwise_bias.py  run_PPH.py  run_SIR.py  run_VMMC.py  run_comparison.py
