[project]
name = "crn-paper"
version = "1.0.0"
description = 'Code associated with the manuscript, "Taming Randomness in Agent-Based Models using Common Random Numbers"'
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starsim @ git+https://github.com/starsimhub/starsim.git@849245e803f1a727a83ea6c5a2e42ebe22c523f9",
]